# tree-sitter-lambdapi

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lambdapi.pc.in
bindings/c/tree_sitter/: tree-sitter-lambdapi.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lambdapi/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLambdaPiTests/: TreeSitterLambdaPiTests.swift
grammars/src/: grammar.json  node-types.json  parser.c
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
